syntax = "proto3";

package template_service;
option go_package = "genproto/template_service";

import "health.proto";
import "models.proto";

service HealthCheckService {
  rpc HealthCheck(Empty) returns (HealthCheckResponse) {}
}